--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,16 +15,12 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-     
+        run: chmod +x gradlew     
       - name: Container start
         run: docker-compose up &
       - name: Waiting for сontainer start
         run: sleep 30
       - name: Start SUT
-        run: java -jar ./artifacts/app-deadline.jar &
+        run: java -jar ./artifacts/app-deadline.jar -P:jdbc.url=jdbc:mysql://localhost:3306/app -P:jdbc.user=app -P:jdbc.password=pass &
       - name: Build with Gradle
-        # Запускаем автотесты
-        # Для проектов на базе Selenide необходимо добавить параметр для запуска браузера
-        # в headless режиме -Dselenide.headless=true, параметр --info должен остаться
         run: ./gradlew test -Dselenide.headless=true --info  
