--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Waiting for сontainer start
         run: sleep 30
       - name: Start SUT
-        run: java -jar ./artifacts/app-deadline.jar -P:jdbc.url=jdbc:mysql://localhost:3306/app -P:jdbc.user=app -P:jdbc.password=pass &
+        run: java -jar ./artifacts/app-deadline.jar &
       - name: Build with Gradle
         run: ./gradlew test -Dselenide.headless=true --info  
